--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "@babel/core": "7.2.0",
     "parcel-bundler": "^1.6.1"
+  },
+  { 
+  "engines" : { 
+    "node" : ">=8.0.0 <11.0.0" 
+    }
   }
 }
